helm-values/monitoring/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-route
  namespace: monitoring
spec:
  parentRefs:
  - name: greencap-gateway
    namespace: default
    sectionName: web
  hostnames:
  - "grafana.greencap"
  - "prometheus.greencap"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus-grafana
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus-kube-prometheus-prometheus
      port: 9090
